--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,40 +1,63 @@
 <ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Ionic-Angular-Auth</ion-title>
-  </ion-toolbar>
+	<ion-toolbar color="primary">
+		<ion-title>Ionic-Angular-Auth</ion-title>
+	</ion-toolbar>
 </ion-header>
- 
+
 <ion-content class="ion-padding">
- 
-  <ion-row>
-    <ion-col size="12" size-sm="10" offset-sm="1" size-md="8" offset-md="2" size-lg="6" offset-lg="3" size-xl="4"
-      offset-xl="4">
- 
-      <ion-card>
-        <ion-card-header>
-          <ion-card-title class="ion-text-center">Your Account</ion-card-title>
-        </ion-card-header>
- 
-        <ion-card-content>
- 
-          <ion-item lines="none">
-            <ion-label position="stacked">Email</ion-label>
-            <ion-input type="email" placeholder="Email" name="email" [(ngModel)]="credentials.email"></ion-input>
-          </ion-item>
- 
-          <ion-item lines="none">
-            <ion-label position="stacked">Password</ion-label>
-            <ion-input type="password" placeholder="Password" name="password" [(ngModel)]="credentials.password"></ion-input>
-          </ion-item>
- 
-          <ion-button (click)="login()" expand="block">Login</ion-button>
-          <ion-button expand="block" color="secondary" routerLink="/register" routerDirection="forward">Register
-          </ion-button>
- 
-        </ion-card-content>
-      </ion-card>
- 
-    </ion-col>
-  </ion-row>
- 
+	<ion-row>
+		<ion-col
+			size="12"
+			size-sm="10"
+			offset-sm="1"
+			size-md="8"
+			offset-md="2"
+			size-lg="6"
+			offset-lg="3"
+			size-xl="4"
+			offset-xl="4"
+		>
+			<ion-card>
+				<ion-card-header>
+					<ion-card-title class="ion-text-center">Your Account</ion-card-title>
+				</ion-card-header>
+
+				<ion-card-content>
+					<ion-item lines="none">
+						<ion-label position="stacked">Email</ion-label>
+						<ion-input
+							type="email"
+							placeholder="Email"
+							name="email"
+							[(ngModel)]="credentials.email"
+						></ion-input>
+					</ion-item>
+
+					<ion-item lines="none">
+						<ion-label position="stacked">Password</ion-label>
+						<ion-input
+							type="password"
+							placeholder="Password"
+							name="password"
+							[(ngModel)]="credentials.password"
+						></ion-input>
+						<br />
+						<ion-label position="stacked"
+							>Try: 'letme@in.com', 'password'</ion-label
+						>
+						<br />
+					</ion-item>
+
+					<ion-button (click)="login()" expand="block">Login</ion-button>
+					<ion-button
+						expand="block"
+						color="secondary"
+						routerLink="/register"
+						routerDirection="forward"
+						>Register
+					</ion-button>
+				</ion-card-content>
+			</ion-card>
+		</ion-col>
+	</ion-row>
 </ion-content>
