--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,12 +1,10 @@
 <ion-header>
-  <ion-toolbar color="secondary">
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-title>Register</ion-title>
-  </ion-toolbar>
+	<ion-toolbar color="secondary">
+		<ion-buttons slot="start">
+			<ion-back-button defaultHref="/"></ion-back-button>
+		</ion-buttons>
+		<ion-title>Register</ion-title>
+	</ion-toolbar>
 </ion-header>
- 
-<ion-content class="padding">
- 
-</ion-content>
+
+<ion-content class="padding"> </ion-content>
